--- a/index.html
+++ b/index.html
@@ -9,7 +9,23 @@
     <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 
 </head>
-<header></header> 
+ <header class="header">
+            <nav>
+                <ul>
+                    <li><a href="./index.html">HOME</a></li>
+                    <li><a href="store.html">STORE</a></li>
+                    <li><a href="payment.html">PAYMENT</a></li>
+                    <li style="float: right;"><a href="#"><i class="fas fa-shopping-cart"></i>cart</a></li>
+
+                    <li style="float: right;"><a href="#" alt="counts items in localstorage"><i class="fas fa-shopping-cart" 
+                    style=" background-color:red;"></i>
+                    <span class="badge" id="badge">0 </span></a></li>
+                </ul>
+            </nav>
+
+            <h1>My store</h1>
+           
+        </header> 
 <main></main>
 <article></article>
 <aside></aside> 
