--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Test page</title>
     <link rel="stylesheet" href="test.css" />
     <link rel="shortcut icon" href="#" />
+    
     <link rel="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 
@@ -26,7 +27,7 @@
             <h1>My store</h1>
            
         </header> 
-<main></main>
+<main><i class="fas fa-window-close fa-2x"></i></main>
 <article></article>
 <aside></aside> 
 <aside></aside>
