--- a/index.html
+++ b/index.html
@@ -27,12 +27,17 @@
             <h1>My store</h1>
            
         </header> 
-<main><i class="fas fa-window-close fa-2x"></i></main>
-<article></article>
-<aside></aside> 
-<aside></aside>
-<footer></footer>
+<main>
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porttitor sagittis nibh sed viverra. Morbi ante lectus, facilisis quis lacinia eget, porta sed sem. Quisque suscipit tortor ante, sed euismod sem ultricies quis. Praesent fringilla massa tempus mi auctor pulvinar a id massa. Vivamus ut ornare felis, in consequat tortor. Nunc eget orci eros. Proin congue mauris vel lacus congue, ut facilisis nibh interdum. Nullam in pretium justo. Sed risus eros, tincidunt venenatis blandit eu, luctus sed mauris. Donec elementum, magna a vestibulum mollis, felis nibh rhoncus dui, in varius nulla quam tempus nisl. Cras et arcu quis sem congue condimentum. Etiam pharetra quis mauris non efficitur. Suspendisse felis nisl, mollis sollicitudin elit id, convallis sagittis lectus.</main>
+<article>Duis cursus lacinia velit vel consectetur. Donec eleifend tincidunt purus, in dapibus dui. Nullam commodo consectetur eros sed ullamcorper. Cras ornare egestas lacus, eu volutpat neque placerat a. Curabitur maximus, eros ac viverra tempus, ex dui lobortis diam, nec sagittis sapien massa sed ligula. Morbi at feugiat nisl. Integer purus justo, faucibus a augue ut, venenatis ullamcorper dolor. Nulla sed tristique eros. Morbi nec faucibus elit. Integer consequat nunc a augue pellentesque, ut finibus erat porttitor. Donec non metus turpis. Curabitur in pharetra lectus. Cras eget lorem in mauris dictum dapibus et non nisi. Aliquam erat volutpat. Morbi eu egestas enim.</article>
+<aside>Cras viverra tempus eros, eu viverra eros auctor at. Donec finibus eu turpis eu suscipit. Sed laoreet, libero sed ornare tristique, leo elit iaculis ipsum, at iaculis nunc nunc nec felis. Nullam quis elit ipsum. Integer tempus dui dolor, id malesuada ligula cursus sit amet. Donec eu neque eget magna feugiat consequat. Sed convallis eu nibh id laoreet. Mauris at euismod mi. Nulla interdum, metus sit amet laoreet tempus, lorem elit iaculis neque, ut pretium lorem justo non lacus. Suspendisse eu lobortis magna. Nulla et purus nunc. Nam a sapien ornare, pellentesque elit id, mollis metus. Duis sed tincidunt dui. Nunc quis elit semper, dapibus turpis at, eleifend felis. Duis eget laoreet enim.</aside> 
+<aside>Vestibulum id libero quis tortor bibendum ultricies in scelerisque augue. Suspendisse aliquet dui et urna venenatis, et lobortis libero consequat. Quisque porta, metus luctus fermentum auctor, est nisi tempor nisl, sed mollis magna augue at diam. Etiam sed erat vulputate, dictum nisi et, dapibus urna. Donec mauris augue, laoreet vitae lacinia nec, convallis scelerisque tortor. Mauris accumsan lectus sit amet magna pulvinar elementum. Ut mattis dignissim libero, vel fringilla ipsum. Aenean eleifend, ex eu pulvinar consequat, ligula massa porta magna, vitae interdum lorem nisi vel libero. Sed nec faucibus massa.</aside>
+<footer>Etiam luctus tristique nulla a tempor. In imperdiet nisl et urna varius faucibus nec sit amet nisl. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam vel vehicula dui. Vivamus iaculis viverra ante sit amet lobortis. Cras ac tempus odio. Suspendisse vehicula mauris nisl, tincidunt elementum sapien laoreet vitae. Etiam ultricies efficitur est, sed auctor tortor faucibus a. Donec dui mi, efficitur ac nulla mollis, pellentesque dignissim eros. Morbi consequat vitae sapien in hendrerit. Vestibulum auctor nisl non risus sodales commodo eget ut leo. Donec interdum, augue id maximus maximus, nibh leo consectetur odio, vel ultricies elit purus vel tellus.</footer>
 
 <body>
+    
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porttitor sagittis nibh sed viverra. Morbi ante lectus, facilisis quis lacinia eget, porta sed sem. Quisque suscipit tortor ante, sed euismod sem ultricies quis. Praesent fringilla massa tempus mi auctor pulvinar a id massa. Vivamus ut ornare felis, in consequat tortor. Nunc eget orci eros. Proin congue mauris vel lacus congue, ut facilisis nibh interdum. Nullam in pretium justo. Sed risus eros, tincidunt venenatis blandit eu, luctus sed mauris. Donec elementum, magna a vestibulum mollis, felis nibh rhoncus dui, in varius nulla quam tempus nisl. Cras et arcu quis sem congue condimentum. Etiam pharetra quis mauris non efficitur. Suspendisse felis nisl, mollis sollicitudin elit id, convallis sagittis lectus.
     </body>
     </html>
